imdb benchmark, tut, nltk

--- a/BaselineExperiments/Baseline_Experiment_Type_1-NaiveBayes.ipynb
+++ b/BaselineExperiments/Baseline_Experiment_Type_1-NaiveBayes.ipynb
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-05-18T09:05:46.612989Z",
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-05-18T09:03:02.883397Z",
@@ -174,7 +174,7 @@
       "text/plain": "       reviewerID        asin      reviewerName helpful  \\\n0  A30TL5EWN6DFXT  120401325X         christina  [0, 0]   \n1   ASY55RVNIL0UD  120401325X          emily l.  [0, 0]   \n2  A2TMXE2AFO7ONB  120401325X             Erica  [0, 0]   \n3   AWJ0WZQYMYFQ4  120401325X                JM  [4, 4]   \n4   ATX7CZYFXI1KW  120401325X  patrice m rogoza  [2, 3]   \n\n                                          reviewText  overall  \\\n0  They look good and stick good! I just don't li...      4.0   \n1  These stickers work like the review says they ...      5.0   \n2  These are awesome and make my phone look so st...      5.0   \n3  Item arrived in great time and was in perfect ...      4.0   \n4  awesome! stays on, and looks great. can be use...      5.0   \n\n                                     summary  unixReviewTime   reviewTime  \n0                                 Looks Good      1400630400  05 21, 2014  \n1                      Really great product.      1389657600  01 14, 2014  \n2                             LOVE LOVE LOVE      1403740800  06 26, 2014  \n3                                      Cute!      1382313600  10 21, 2013  \n4  leopard home button sticker for iphone 4s      1359849600   02 3, 2013  ",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>reviewerID</th>\n      <th>asin</th>\n      <th>reviewerName</th>\n      <th>helpful</th>\n      <th>reviewText</th>\n      <th>overall</th>\n      <th>summary</th>\n      <th>unixReviewTime</th>\n      <th>reviewTime</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>A30TL5EWN6DFXT</td>\n      <td>120401325X</td>\n      <td>christina</td>\n      <td>[0, 0]</td>\n      <td>They look good and stick good! I just don't li...</td>\n      <td>4.0</td>\n      <td>Looks Good</td>\n      <td>1400630400</td>\n      <td>05 21, 2014</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>ASY55RVNIL0UD</td>\n      <td>120401325X</td>\n      <td>emily l.</td>\n      <td>[0, 0]</td>\n      <td>These stickers work like the review says they ...</td>\n      <td>5.0</td>\n      <td>Really great product.</td>\n      <td>1389657600</td>\n      <td>01 14, 2014</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>A2TMXE2AFO7ONB</td>\n      <td>120401325X</td>\n      <td>Erica</td>\n      <td>[0, 0]</td>\n      <td>These are awesome and make my phone look so st...</td>\n      <td>5.0</td>\n      <td>LOVE LOVE LOVE</td>\n      <td>1403740800</td>\n      <td>06 26, 2014</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>AWJ0WZQYMYFQ4</td>\n      <td>120401325X</td>\n      <td>JM</td>\n      <td>[4, 4]</td>\n      <td>Item arrived in great time and was in perfect ...</td>\n      <td>4.0</td>\n      <td>Cute!</td>\n      <td>1382313600</td>\n      <td>10 21, 2013</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>ATX7CZYFXI1KW</td>\n      <td>120401325X</td>\n      <td>patrice m rogoza</td>\n      <td>[2, 3]</td>\n      <td>awesome! stays on, and looks great. can be use...</td>\n      <td>5.0</td>\n      <td>leopard home button sticker for iphone 4s</td>\n      <td>1359849600</td>\n      <td>02 3, 2013</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,146 +182,7 @@
    "source": [
     "## convert list into pandas dataframe\n",
     "df = pd.DataFrame.from_dict(data)\n",
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-05-14T08:46:13.664972Z",
-     "start_time": "2020-05-14T08:46:13.634403Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>reviewerID</th>\n",
-       "      <th>asin</th>\n",
-       "      <th>reviewerName</th>\n",
-       "      <th>helpful</th>\n",
-       "      <th>reviewText</th>\n",
-       "      <th>overall</th>\n",
-       "      <th>summary</th>\n",
-       "      <th>unixReviewTime</th>\n",
-       "      <th>reviewTime</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>ADZPIG9QOCDG5</td>\n",
-       "      <td>0005019281</td>\n",
-       "      <td>Alice L. Larson \"alice-loves-books\"</td>\n",
-       "      <td>[0, 0]</td>\n",
-       "      <td>This is a charming version of the classic Dick...</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>good version of a classic</td>\n",
-       "      <td>1203984000</td>\n",
-       "      <td>02 26, 2008</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>A35947ZP82G7JH</td>\n",
-       "      <td>0005019281</td>\n",
-       "      <td>Amarah Strack</td>\n",
-       "      <td>[0, 0]</td>\n",
-       "      <td>It was good but not as emotionally moving as t...</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>Good but not as moving</td>\n",
-       "      <td>1388361600</td>\n",
-       "      <td>12 30, 2013</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>A3UORV8A9D5L2E</td>\n",
-       "      <td>0005019281</td>\n",
-       "      <td>Amazon Customer</td>\n",
-       "      <td>[0, 0]</td>\n",
-       "      <td>Don't get me wrong, Winkler is a wonderful cha...</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>Winkler's Performance was ok at best!</td>\n",
-       "      <td>1388361600</td>\n",
-       "      <td>12 30, 2013</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>A1VKW06X1O2X7V</td>\n",
-       "      <td>0005019281</td>\n",
-       "      <td>Amazon Customer \"Softmill\"</td>\n",
-       "      <td>[0, 0]</td>\n",
-       "      <td>Henry Winkler is very good in this twist on th...</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>It's an enjoyable twist on the classic story</td>\n",
-       "      <td>1202860800</td>\n",
-       "      <td>02 13, 2008</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>A3R27T4HADWFFJ</td>\n",
-       "      <td>0005019281</td>\n",
-       "      <td>BABE</td>\n",
-       "      <td>[0, 0]</td>\n",
-       "      <td>This is one of the best Scrooge movies out.  H...</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>Best Scrooge yet</td>\n",
-       "      <td>1387670400</td>\n",
-       "      <td>12 22, 2013</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       reviewerID        asin                         reviewerName helpful  \\\n",
-       "0   ADZPIG9QOCDG5  0005019281  Alice L. Larson \"alice-loves-books\"  [0, 0]   \n",
-       "1  A35947ZP82G7JH  0005019281                        Amarah Strack  [0, 0]   \n",
-       "2  A3UORV8A9D5L2E  0005019281                      Amazon Customer  [0, 0]   \n",
-       "3  A1VKW06X1O2X7V  0005019281           Amazon Customer \"Softmill\"  [0, 0]   \n",
-       "4  A3R27T4HADWFFJ  0005019281                                 BABE  [0, 0]   \n",
-       "\n",
-       "                                          reviewText  overall  \\\n",
-       "0  This is a charming version of the classic Dick...      4.0   \n",
-       "1  It was good but not as emotionally moving as t...      3.0   \n",
-       "2  Don't get me wrong, Winkler is a wonderful cha...      3.0   \n",
-       "3  Henry Winkler is very good in this twist on th...      5.0   \n",
-       "4  This is one of the best Scrooge movies out.  H...      4.0   \n",
-       "\n",
-       "                                        summary  unixReviewTime   reviewTime  \n",
-       "0                     good version of a classic      1203984000  02 26, 2008  \n",
-       "1                        Good but not as moving      1388361600  12 30, 2013  \n",
-       "2         Winkler's Performance was ok at best!      1388361600  12 30, 2013  \n",
-       "3  It's an enjoyable twist on the classic story      1202860800  02 13, 2008  \n",
-       "4                              Best Scrooge yet      1387670400  12 22, 2013  "
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.head()"
+    "df.head()\n"
    ]
   },
   {
@@ -338,7 +199,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1697533\n"
+      "194439\n"
      ]
     }
    ],
@@ -421,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-05-18T08:27:25.880516Z",
@@ -430,19 +291,15 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<1x86756 sparse matrix of type '<class 'numpy.float64'>'\n",
-       "\twith 36 stored elements in Compressed Sparse Row format>"
-      ]
-     },
-     "execution_count": 65,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 86756)\n"
+     ]
     }
    ],
    "source": [
-    "xtrain_tfidf[0]"
+    "print(xtrain_tfidf[0].shape)"
    ]
   },
   {
