--- a/Preprocessing/Tutorial_Thompson.ipynb
+++ b/Preprocessing/Tutorial_Thompson.ipynb
@@ -55,8 +55,8 @@
       "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /opt/conda/lib/python3.6/site-packages (from requests->fastai) (3.0.4)\n",
       "Requirement already satisfied: tqdm<5.0.0,>=4.10.0 in /opt/conda/lib/python3.6/site-packages (from thinc<7.1.0,>=7.0.8->spacy>=2.0.18->fastai) (4.35.0)\n",
       "Requirement already satisfied: setuptools in /opt/conda/lib/python3.6/site-packages (from kiwisolver>=1.0.1->matplotlib->fastai) (41.0.1)\n",
-      "\u001b[33mWARNING: You are using pip version 19.2.3, however version 20.2.2 is available.\n",
-      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n",
+      "\u001B[33mWARNING: You are using pip version 19.2.3, however version 20.2.2 is available.\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001B[0m\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -99,7 +99,7 @@
    "metadata": {},
    "source": [
     "### Tokenizing and document matrix creation\n",
-    "start wprking on a sample of data before using the full dataset-- allows quicker computations as we debug and get code working. Using IMDB sample:"
+    "start working on a sample of data before using the full dataset-- allows quicker computations as we debug and get code working. Using IMDB sample:"
    ]
   },
   {
