Vader run, Baseline Cell type1 with CountVectorizer

--- a/BaselineExperiments/cellphone_improve.ipynb
+++ b/BaselineExperiments/cellphone_improve.ipynb
@@ -2,67 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": true,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'shouldn', 'not', 'yours', 'mustn', 'was', \"didn't\", 'being', \"wasn't\", \"you've\", 'from', 'below', 'few', 'your', 'been', \"you'd\", 'am', 'more', 'this', 'it', \"hasn't\", 'here', 'only', 'about', 'mightn', 'did', 'than', 'd', 'aren', \"you're\", 'nor', \"haven't\", \"should've\", 'hasn', 'under', 'you', 'needn', 'our', 'itself', 'o', \"she's\", 'again', 'very', 'into', 'with', 'can', 'wouldn', 'herself', 'me', \"shouldn't\", 'own', 'and', 'i', 'no', 'he', 'then', 'had', 'my', \"that'll\", 'ours', 'wasn', \"hadn't\", 'whom', 'after', 'further', 'of', \"don't\", 'when', \"mustn't\", 'on', 'y', 'him', 'until', 'each', 'ma', 'as', 'against', 'out', \"couldn't\", \"weren't\", 're', 'is', 'during', 'yourself', 'his', 'now', 'down', 'doing', 'but', 'were', \"won't\", 'if', 'hers', \"needn't\", 'her', 'do', 'by', 'above', 'at', 'don', 'that', 'have', 'before', 'ourselves', 'to', 'himself', 'in', 'why', 's', 'the', 'll', 'weren', 'an', \"it's\", 'couldn', 'doesn', 'isn', 'which', 'too', 'what', \"doesn't\", 'once', 'just', 'yourselves', 'has', 'should', 'both', 'does', 've', 'them', 'who', 'a', 'because', \"you'll\", 'up', 'ain', 'its', 'those', 'didn', 'where', 'how', 'they', 'any', \"mightn't\", 'so', 'will', 'off', 'their', 'all', 't', 'myself', \"aren't\", 'most', 'won', 'some', 'be', 'there', 'we', 'such', \"wouldn't\", 'through', 'these', 'haven', 'she', 'themselves', \"shan't\", 'hadn', 'between', 'having', 'theirs', 'shan', 'other', 'same', \"isn't\", 'm', 'or', 'for', 'are', 'over', 'while'}\n",
-      "['This', 'example', 'showing', 'stop', 'word', 'filtering', 'need', 'conjunctions', '.']\n",
-      "I\n",
-      "did\n",
-      "n't\n",
-      "know\n",
-      ",\n",
-      "you\n",
-      "are\n",
-      ",\n",
-      "He\n",
-      "is\n",
-      ",\n",
-      "she\n",
-      "is\n",
-      ",\n",
-      "We\n",
-      "are\n",
-      ",\n",
-      "they\n",
-      "are\n"
-     ]
-    }
-   ],
-   "source": [
-    "import nltk\n",
-    "# nltk.download()\n",
-    "from nltk.tokenize import word_tokenize\n",
-    "from nltk.corpus import stopwords\n",
-    "from nltk.stem import PorterStemmer\n",
-    "\n",
-    "stop_words = set(stopwords.words('english'))\n",
-    "print(stop_words)\n",
-    "\n",
-    "example_sentence = \"This is an example showing off stop word filtering but we need conjunctions.\"\n",
-    "words = word_tokenize(example_sentence)\n",
-    "filtered_sentence = [w for w in words if not w in stop_words]\n",
-    "print(filtered_sentence)\n",
-    "\n",
-    "ex1 = \"I didn't know, You are, He is, She is, We are, They are\"\n",
-    "ps = PorterStemmer()\n",
-    "words1 = word_tokenize(ex1)\n",
-    "for w in words1:\n",
-    "    print(ps.stem(w))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 206,
    "outputs": [],
    "source": [
     "import gzip, json, pandas as pd\n",
@@ -74,9 +14,9 @@
     "    for l in f:\n",
     "        data.append(json.loads(l.strip()))\n",
     "\n",
-    "data = pd.DataFrame.from_dict(data)\n",
-    "target = data['overall']\n",
-    "text = data['reviewText']\n",
+    "df = pd.DataFrame.from_dict(data)\n",
+    "target = df['overall']\n",
+    "text = df['reviewText']\n",
     "\n",
     "# from collections import Counter\n",
     "# print(sorted(Counter(target).items()))"
@@ -90,16 +30,163 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 208,
+   "outputs": [],
+   "source": [
+    "# from nltk.tokenize import MWETokenizer\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "# print(data[0]['reviewText'])\n",
+    "# mwe = MWETokenizer()\n",
+    "sample = df.head()\n",
+    "def get_token(row):\n",
+    "    return word_tokenize(row['reviewText'])\n",
+    "# sample['reviewText'] = sample.apply(get_token, axis=1)\n",
+    "# print(sample)\n",
+    "df['token'] = df.apply(get_token, axis=1)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 207,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(1.0, 108664), (2.0, 108664), (3.0, 108664), (4.0, 108664), (5.0, 108664)]\n"
+      "They look good and stick good! I just don't like the rounded shape because I was always bumping it and Siri kept popping up and it was irritating. I just won't buy a product like this again\n",
+      "['They', 'look', 'good', 'and', 'stick', 'good', '!', 'I', 'just', 'do', \"n't\", 'like', 'the', 'rounded', 'shape', 'because', 'I', 'was', 'always', 'bumping', 'it', 'and', 'Siri', 'kept', 'popping', 'up', 'and', 'it', 'was', 'irritating', '.', 'I', 'just', 'wo', \"n't\", 'buy', 'a', 'product', 'like', 'this', 'again']\n"
      ]
     }
    ],
+   "source": [
+    "# print(text[0])\n",
+    "# print(word_tokenize(text[0]))\n",
+    "print(df['token'][0])\n",
+    "# df['reviewText'][4]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.series.Series'>\n",
+      "<class 'list'>\n",
+      "'\n",
+      "4.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import nltk\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "df['reviewText']\n",
+    "df['overall']\n",
+    "\n",
+    "print(type(df['reviewText']))\n",
+    "list = [df[\"reviewText\"], df['overall']]\n",
+    "\n",
+    "print(type(list[0][0]))\n",
+    "print(list[0][0], list[1][0], sep='\\n')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "all_words = []\n",
+    "short_text = ' '.join(text.tolist())\n",
+    "all_words = word_tokenize(short_text)\n",
+    "print(len(all_words))\n",
+    "all_words = nltk.FreqDist(all_words)\n",
+    "# 20237302"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('.', 879899), ('the', 864303), (',', 592718), ('I', 541248), ('and', 481230), ('to', 451327), ('it', 448133), ('a', 447996), ('is', 327015), ('of', 236664), ('for', 227145), ('my', 212635), ('this', 202398), ('that', 188574), ('on', 174766)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(all_words.most_common(15))\n",
+    "  \n",
+    "\n",
+    "def find_features(document):\n",
+    "    words = set(document)\n",
+    "    features = {}\n",
+    "    for w in word_features:\n",
+    "        features[w] = (w in words)\n",
+    "    return features"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.series.Series'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "text_new = find_features(text)\n",
+    "print(type(text))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "from collections import Counter\n",
     "from imblearn.over_sampling import RandomOverSampler\n",
@@ -131,45 +218,6 @@
    ],
    "source": [
     "print(X_res.iloc[:3]['reviewText'])"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "They look good and stick good! I just don't like the rounded shape because I was always bumping it and Siri kept popping up and it was irritating. I just won't buy a product like this again\n",
-      "['They', 'look', 'good', 'and', 'stick', 'good', '!', 'I', 'just', 'do', \"n't\", 'like', 'the', 'rounded', 'shape', 'because', 'I', 'was', 'always', 'bumping', 'it', 'and', 'Siri', 'kept', 'popping', 'up', 'and', 'it', 'was', 'irritating', '.', 'I', 'just', 'wo', \"n't\", 'buy', 'a', 'product', 'like', 'this', 'again']\n",
-      "['They', 'look', 'good', 'stick', 'good', '!', 'I', \"n't\", 'like', 'rounded', 'shape', 'I', 'always', 'bumping', 'Siri', 'kept', 'popping', 'irritating', '.', 'I', 'wo', \"n't\", 'buy', 'product', 'like']\n",
-      "They look good stick good! In't like rounded shape I always bumping Siri kept popping irritating . I won't buy product like\n",
-      "4.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "from nltk import WordNetLemmatizer\n",
-    "from nltk.tokenize.treebank import TreebankWordDetokenizer\n",
-    "\n",
-    "lemmatizer = WordNetLemmatizer()\n",
-    "print(text[0])\n",
-    "words = word_tokenize(text[0])\n",
-    "print(words)\n",
-    "# stemmed = [ps.stem(w) for w in words if not w in stop_words]\n",
-    "stemmed = [lemmatizer.lemmatize(w) for w in words if not w in stop_words]\n",
-    "str1 = TreebankWordDetokenizer().detokenize(stemmed)\n",
-    "print(stemmed)\n",
-    "print(str1)\n",
-    "print(target[0])\n",
-    "t1 = \"I like apples, but grapes I like best. I don't like pears\""
    ],
    "metadata": {
     "collapsed": false,
@@ -263,16 +311,7 @@
    "cell_type": "code",
    "execution_count": 47,
    "outputs": [],
-   "source": [
-    "from nltk.tokenize.treebank import TreebankWordDetokenizer\n",
-    "print(reviews_train_clean[0])\n",
-    "words = word_tokenize(reviews_train_clean[0])\n",
-    "stemmed = [ps.stem(w) for w in words]\n",
-    "str1 = TreebankWordDetokenizer().detokenize(stemmed)\n",
-    "print(stemmed)\n",
-    "print(str1)\n",
-    "print(y_train[0])"
-   ],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
