--- a/BaselineExperiments/Untitled.ipynb
+++ b/BaselineExperiments/Untitled.ipynb
@@ -142,6 +142,37 @@
     "    reviews = [REPLACE_WITH_SPACE.sub(SPACE, line) for line in reviews]\n",
     "    return reviews\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-09-06T20:56:58.368647Z",
+     "start_time": "2020-09-06T20:56:58.362047Z"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-9-27cd4a422c43>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-9-27cd4a422c43>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    conda install scikit-learn=0.22\u001b[0m\n\u001b[0m                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sklearn\n",
+    "print('The scikit-learn version is {}.'.format(sklearn.__version__))\n"
+   ]
   }
  ],
  "metadata": {
